--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "axios": "^1.7.9",
+    "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.3",
     "framer-motion": "^12.4.7",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.10.1",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "sweetalert2": "^11.17.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
