--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "animate.css": "^4.1.1",
     "axios": "^1.7.9",
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.3",
@@ -24,6 +25,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
+    "recharts": "^2.15.1",
     "sweetalert2": "^11.17.2"
   },
   "devDependencies": {
